logs/ezgal.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ezgal'...
Compiling './lib/python3.5/site-packages/ezgal/cosmology.py'...
***   File "./lib/python3.5/site-packages/ezgal/cosmology.py", line 239
    print 'Usage : cosmology.py z1 [z2]'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ezgal/csp_integrator.py'...
***   File "./lib/python3.5/site-packages/ezgal/csp_integrator.py", line 202
    print "WARNING: Reached iteration limit of %d iterations.  Expect errors in final magnitudes of %.4f mags.\nIf this is unacceptable try increasing max_iter." % (max_iter,err)
                                                                                                                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ezgal/ezgal.py'...
***   File "./lib/python3.5/site-packages/ezgal/ezgal.py", line 329
    print 'Default cosmology loaded'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ezgal/ezgal_light.py'...
***   File "./lib/python3.5/site-packages/ezgal/ezgal_light.py", line 103
    print 'loading file from: %s' % model_file
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ezgal-2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
